# pynance

./: CHANGELOG.md  Data_Aggregator.py  Data_Retrieval.py  Portfolio_Calculator.py  README.md  Risk_Free_Rate.py  defunct.py  main.py  requirements.txt  setup.cfg  setup.py
Graphs/: max_sharpe_pie.html  min_var_pie.html
PortfolioOptimizer/: Data_Aggregator.py  Portfolio_Calculator.py  main.py
docs/: capital_allocation.md  efficient_frontier.md  expected_return_range.md  max_sharpe_portfolio.md  min_std_portfolio.md
pynance/: Portfolio_Calculator.py  main.py  portfolio_optimizer.py
pynance/datahelpers/: data_aggregator.py
