[metadata]
name = portfoliooptimizer
description = optimizes portfolio of requested tickers
author = Matthew Qandil
license = MIT
license_file = LICENSE
platforms = osx, unix
classifiers = 
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = 
    portfoliooptimizer
install_requires = 
    pandas>=1.3.2
    numpy>=1.21.2
    yfinance>=0.1.70
    seaborn>=0.11.2
    matplotlib>=3.4.3
    scipy>=1.7.1
python_requires = >=3.6
package_directory = 
    =PortfolioOptimizer
zip_safe = no