[metadata]
name = pynance
description = optimizes portfolio of requested tickers
author = Matthew Qandil
license = MIT
license_file = LICENSE
platforms = osx, unix
classifiers = 
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = 
    pynance
install_requires = 
    pandas>=1.3.2
    numpy>=1.21.2
    yfinance>=0.1.70
    scipy>=1.7.1
    plotly>=5.7.0

python_requires = >=3.6
package_directory = 
    =pynance
zip_safe = no